kermeta_projects/fr.irisa.triskell.kermeta.io/test/constraintchecker_tests/invalid/003_associations_06.kmt
/* $Id: 003_associations_06.kmt,v 1.2 2005-11-30 14:31:40 dvojtise Exp $ */

// Test of a invalid associations

package root_package;


/* not usable link : the atribute a in class C cannot be 
	used without raising a constraint exception on A.b*/
class A {
    reference b : B[1]#a
}
class B {
	attribute a : A#b
	
}

class C {
	attribute a : A // a warning should occur here
}
